# virgo-agent

./: .env.example  .env.example.txt  .env.txt  .gitignore  .virgo_desktop_config.json  .virgo_desktop_geom.json  .virgo_themes.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  _console.py  _log.py  _make_logo.py  _rag.py  agent_runtime.py  autodepend.py  blackboard.py  cli.py  config.py  critic.py  dashboard.json  environment.py  evaluator.py  experience.py  exporter.py  generators.py  logo.py  main.py  mcp_bridge.py  mcp_server.py  memory.py  mock_logs.txt  mypy.ini  orchestrator.py  plugins.py  pyproject.toml  (+45 more)
.github/workflows/: pypi-publish.yml  release.yml  test.yml
completions/: virgo.bash  virgo.ps1  virgo.zsh
data/: sample_candidate_profile.txt  sample_diagnostics_report.json  sample_network_map.json
kb/: local-llm-setup.md  research-sources.md  virgo-info.md  windows-cli.md
kb/private/: .gitignore
recon_app/: app.js  index.html  manifest.json  style.css
scaffolds/: agent-tool.json  cli-app.json  fastapi-crud.json  flask-app.json  python-lib.json
tests/: test__console.py  test_agent_runtime.py  test_autodepend.py  test_blackboard.py  test_chat.py  test_cli.py  test_critic.py  test_demo_pipeline.py  test_desktop.py  test_environment.py  test_evaluator.py  test_experience.py  test_fingerprinter.py  test_mcp.py  test_memory.py  test_orchestrator_pytest.py  test_rag.py  test_sandbox.py  test_scaffold.py  test_server.py  test_swarm.py  test_testgen.py  test_tools.py  test_tools_core.py  test_virgo_alerts.py  test_virgo_run.py  test_webhook.py
