[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "virgo-agent"
version = "0.6.0"
description = "Multi-agent state machine with diagnostics, search, and auto-fix"
readme = "README.md"
license = "MIT"
dependencies = [
    "python-dotenv",
    "textual>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]
requires-python = ">=3.11"
authors = [
    { name = "Virgo Contributors" },
]

[project.optional-dependencies]
web = ["fastapi", "uvicorn", "jinja2", "sse-starlette"]
desktop = ["PyQt6>=6.6", "psutil>=5.9"]
dev = ["pytest>=7", "pytest-cov>=4", "pytest-xdist>=3", "mypy>=1", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["agent_env", ".virgo_memory", "venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "C401", "C408", "SIM105", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F403", "F405"]
"cli.py" = ["E402"]
"run.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
virgo = "cli:main"
virgo-mcp = "mcp_server:main"
virgo-dashboard = "virgo_menu:master_dashboard"
virgo-textual = "virgo_textual:main"
virgo-desktop = "virgo_desktop:main"
